Copy quick-buy pins null-tolerantly so the shop opens with empty slots
The quick-buy list is positional — nulls mark its empty slots — and the
accessor copied it with List.copyOf, which refuses nulls. Any player with an
unfilled quick-buy slot (nearly everyone) crashed the shop open with an NPE
in RushService.quickBuyIds. The copy is now null-tolerant. 0.7.2.